// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`gate G14: the element set > 'Canvas' 1`] = `
[
  "1× caption",
  "21× circle.shiftcharts-point",
  "1× details.shiftcharts-data-table",
  "1× figcaption.shiftcharts-chart__caption",
  "1× figure.shiftcharts-chart",
  "1× g.shiftcharts-axis shiftcharts-axis--x",
  "1× g.shiftcharts-axis shiftcharts-axis--y",
  "12× g.shiftcharts-axis__tick",
  "1× g.shiftcharts-grid",
  "3× g.shiftcharts-series",
  "3× path.shiftcharts-line",
  "1× rect.shiftcharts-axis__rule",
  "12× rect.shiftcharts-axis__tick-mark",
  "5× rect.shiftcharts-grid__line",
  "1× rect.shiftcharts-grid__zero",
  "1× summary.shiftcharts-data-table__summary",
  "1× svg.shiftcharts-chart__svg",
  "1× table.shiftcharts-data-table__table",
  "1× tbody",
  "21× td",
  "12× text.shiftcharts-axis__tick-label",
  "3× text.shiftcharts-label",
  "11× th",
  "1× thead",
  "4× title",
  "8× tr",
]
`;

exports[`gate G14: the element set > 'Micro' 1`] = `
[
  "1× caption",
  "1× details.shiftcharts-data-table",
  "1× figcaption.shiftcharts-chart__caption",
  "1× figure.shiftcharts-chart",
  "3× g.shiftcharts-series",
  "1× g.shiftcharts-value-display",
  "1× summary.shiftcharts-data-table__summary",
  "1× svg.shiftcharts-chart__svg",
  "1× table.shiftcharts-data-table__table",
  "1× tbody",
  "9× td",
  "1× text.shiftcharts-value",
  "1× text.shiftcharts-value__overflow",
  "7× th",
  "1× thead",
  "4× title",
  "4× tr",
  "1× tspan.shiftcharts-value__context shiftcharts-value__label",
  "1× tspan.shiftcharts-value__metric",
  "1× tspan.shiftcharts-value__separator",
]
`;

exports[`gate G14: the element set > 'Panel' 1`] = `
[
  "1× caption",
  "1× details.shiftcharts-data-table",
  "1× figcaption.shiftcharts-chart__caption",
  "1× figure.shiftcharts-chart",
  "1× g.shiftcharts-axis shiftcharts-axis--x",
  "1× g.shiftcharts-axis shiftcharts-axis--y",
  "8× g.shiftcharts-axis__tick",
  "1× g.shiftcharts-grid",
  "3× g.shiftcharts-series",
  "3× path.shiftcharts-line",
  "1× rect.shiftcharts-axis__rule",
  "8× rect.shiftcharts-axis__tick-mark",
  "5× rect.shiftcharts-grid__line",
  "1× rect.shiftcharts-grid__zero",
  "1× summary.shiftcharts-data-table__summary",
  "1× svg.shiftcharts-chart__svg",
  "1× table.shiftcharts-data-table__table",
  "1× tbody",
  "21× td",
  "8× text.shiftcharts-axis__tick-label",
  "3× text.shiftcharts-label",
  "11× th",
  "1× thead",
  "4× title",
  "8× tr",
]
`;

exports[`gate G14: the element set > 'Stage' 1`] = `
[
  "1× caption",
  "21× circle.shiftcharts-point",
  "1× details.shiftcharts-data-table",
  "1× figcaption.shiftcharts-chart__caption",
  "1× figure.shiftcharts-chart",
  "1× g.shiftcharts-axis shiftcharts-axis--x",
  "1× g.shiftcharts-axis shiftcharts-axis--y",
  "12× g.shiftcharts-axis__tick",
  "1× g.shiftcharts-grid",
  "3× g.shiftcharts-series",
  "3× path.shiftcharts-line",
  "1× rect.shiftcharts-axis__rule",
  "12× rect.shiftcharts-axis__tick-mark",
  "5× rect.shiftcharts-grid__line",
  "1× rect.shiftcharts-grid__zero",
  "1× summary.shiftcharts-data-table__summary",
  "1× svg.shiftcharts-chart__svg",
  "1× table.shiftcharts-data-table__table",
  "1× tbody",
  "21× td",
  "12× text.shiftcharts-axis__tick-label",
  "3× text.shiftcharts-label",
  "8× text.shiftcharts-value-label",
  "11× th",
  "1× thead",
  "4× title",
  "8× tr",
]
`;

exports[`gate G14: the element set > 'Strip' 1`] = `
[
  "1× caption",
  "1× details.shiftcharts-data-table",
  "1× figcaption.shiftcharts-chart__caption",
  "1× figure.shiftcharts-chart",
  "1× g.shiftcharts-axis shiftcharts-axis--x",
  "2× g.shiftcharts-axis__tick",
  "1× g.shiftcharts-compact-key",
  "3× g.shiftcharts-compact-key__entry",
  "3× g.shiftcharts-series",
  "3× path.shiftcharts-line",
  "1× rect.shiftcharts-axis__rule",
  "2× rect.shiftcharts-axis__tick-mark",
  "3× rect.shiftcharts-compact-key__swatch",
  "1× summary.shiftcharts-data-table__summary",
  "1× svg.shiftcharts-chart__svg",
  "1× table.shiftcharts-data-table__table",
  "1× tbody",
  "21× td",
  "2× text.shiftcharts-axis__tick-label",
  "3× text.shiftcharts-compact-key__label",
  "11× th",
  "1× thead",
  "5× title",
  "8× tr",
]
`;

exports[`gate G14: the element set > 'Tile-horizon' 1`] = `
[
  "1× caption",
  "1× details.shiftcharts-data-table",
  "1× figcaption.shiftcharts-chart__caption",
  "1× figure.shiftcharts-chart",
  "1× g.shiftcharts-compact-key",
  "3× g.shiftcharts-compact-key__entry",
  "1× g.shiftcharts-compact-plot",
  "3× g.shiftcharts-series",
  "1× g.shiftcharts-value-display",
  "4× path.shiftcharts-band",
  "3× rect.shiftcharts-compact-key__swatch",
  "1× summary.shiftcharts-data-table__summary",
  "1× svg.shiftcharts-chart__svg",
  "1× table.shiftcharts-data-table__table",
  "1× tbody",
  "9× td",
  "3× text.shiftcharts-compact-key__label",
  "1× text.shiftcharts-value",
  "1× text.shiftcharts-value__overflow",
  "7× th",
  "1× thead",
  "5× title",
  "4× tr",
  "1× tspan.shiftcharts-value__context shiftcharts-value__label",
  "1× tspan.shiftcharts-value__delta",
  "1× tspan.shiftcharts-value__metric",
  "1× tspan.shiftcharts-value__separator",
]
`;

exports[`gate G14: the element set > 'Tile-line' 1`] = `
[
  "1× caption",
  "1× details.shiftcharts-data-table",
  "1× figcaption.shiftcharts-chart__caption",
  "1× figure.shiftcharts-chart",
  "1× g.shiftcharts-compact-key",
  "3× g.shiftcharts-compact-key__entry",
  "1× g.shiftcharts-compact-plot",
  "3× g.shiftcharts-series",
  "1× g.shiftcharts-value-display",
  "3× path.shiftcharts-line",
  "3× rect.shiftcharts-compact-key__swatch",
  "1× summary.shiftcharts-data-table__summary",
  "1× svg.shiftcharts-chart__svg",
  "1× table.shiftcharts-data-table__table",
  "1× tbody",
  "9× td",
  "3× text.shiftcharts-compact-key__label",
  "1× text.shiftcharts-value",
  "1× text.shiftcharts-value__overflow",
  "7× th",
  "1× thead",
  "5× title",
  "4× tr",
  "1× tspan.shiftcharts-value__context shiftcharts-value__label",
  "1× tspan.shiftcharts-value__delta",
  "1× tspan.shiftcharts-value__metric",
  "1× tspan.shiftcharts-value__separator",
]
`;
